# Submarino_con_ROS

./: README.md
Archivos_modificados/: joystick.launch  mundocreado.launch  start_tutorial_dp_controller_controlador_bueno.launch  start_tutorial_dp_controller_demo.launch  teclado.launch  tutorial_disturbance_bueno.launch  tutorial_dp_controller_controlador_bueno.py
Archivos_modificados/programas_trabajo/: CMakeLists.txt  package.xml
Archivos_modificados/programas_trabajo/config/: costmap_common_params.yaml  example_waypoints.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapanuevo.world
Archivos_modificados/programas_trabajo/launch/: README para correr los programas.txt  start_plume_server.launch  start_tutorial_dp_controller.launch  start_tutorial_dp_controller_demo.launch
uuv_plume_simulator/: CONTRIBUTING.md  LICENSE  NOTICE  README.md
uuv_plume_simulator/uuv_cpc_sensor/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_plume_simulator/uuv_cpc_sensor/launch/: start_cpc_sensor.launch
uuv_plume_simulator/uuv_cpc_sensor/src/: CPCSensor.cc  CPCSensorNode.cc
uuv_plume_simulator/uuv_plume_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_plume_simulator/uuv_plume_msgs/msg/: ParticleConcentration.msg  Salinity.msg
uuv_plume_simulator/uuv_plume_msgs/srv/: CreatePassiveScalarTurbulentPlume.srv  CreateSpheroidPlume.srv  DeletePlume.srv  GetCurrentModel.srv  GetNumParticles.srv  GetPlumeConfiguration.srv  GetPlumeSourcePosition.srv  (+8 more)
uuv_plume_simulator/uuv_plume_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
(+23 files in other folders)
