<?xml version="1.0"?>
<package format="2">
  <name>programas_trabajo</name>
  <version>0.6.13</version>
  <description>
    Programas .launch que se han creado y probado en el trabajo
  </description>

<maintainer email="fernando.rh2003@gmail.com">Fernando Román</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uuv_trajectory_control</exec_depend>
  <exec_depend>uuv_control_utils</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>uuv_gazebo</exec_depend>
 <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>geometry_msgs</build_export_depend>

  <export>
  </export>
</package>
